--- a/index.html
+++ b/index.html
@@ -7,136 +7,143 @@
     <title>Wheather App</title>
   </head>
   <body>
-    <div class="selectHeader">
-      <h1>Selecione a cidade:</h1>
-      <div class="selectContainer">
-        <i class="uil uil-location-point"></i>
-        <select id="selectCity">
-          <option value="6321162">Belo Horizonte</option>
-          <option value="524894">Moscou</option>
-          <option value="2735943">Porto</option>
-          <option value="5368361">Los Angeles</option>
-          <option value="2643743">Londres</option>
-        </select>
-
-        <button id="OpenModalButton">
-          <i class="uil uil-search"></i>
-        </button>
-      </div>
-    </div>
-    <div class="wheatherInfo">
-      <div class="tempInfo">
-        <i id="WeatherMainIcon" class="uil uil-cloud-sun"></i>
-        <p id="WeatherMain">Nublado</p>
-        <div class="tempResult">
-          <h2 id="CityTemp">
-            00
-          </h2>
-          <span>ºC</span>
-        </div>
-      </div>
-      <div class="othersInfo">
-        <div class="itemCard">
-          <div class="itemTitle">
-            <i class="uil uil-wind"></i>
-            <p>Velocidade Do Vento</p>
-          </div>
-          <div class="itemResult">
-            <p id="WindSpeed">
-              0
-            </p>
-            <span>
-              m/s
-            </span>
-          </div>
-        </div>
-        <div class="itemCard">
-          <div class="itemTitle">
-            <i class="uil uil-raindrops-alt"></i>
-            <p>Humidade</p>
-          </div>
-          <div class="itemResult">
-            <p id="Humidity">
-              00
-            </p>
-            <span>
-              %
-            </span>
-          </div>
-        </div>
-        <div class="itemCard">
-          <div class="itemTitle">
-            <i class="uil uil-windsock"></i>
-            <p>Pressão</p>
-          </div>
-          <div class="itemResult">
-            <p id="Pressure">
-              0000
-            </p>
-            <span>
-              hPa
-            </span>
-          </div>
-        </div>
-        <div class="itemCard">
-          <div class="itemTitle">
-            <i class="uil uil-temperature-plus"></i>
-            <p>Temperatura Máxima</p>
-          </div>
-          <div class="itemResult">
-            <p id="MaximumTemperature">
-              00
-            </p>
-            <span>
-              ºC
-            </span>
-          </div>
-        </div>
-        <div class="itemCard">
-          <div class="itemTitle">
-            <i class="uil uil-temperature-minus"></i>
-            <p>Temperatura Mínima</p>
-          </div>
-          <div class="itemResult">
-            <p id="MinimumTemperature">
-              00
-            </p>
-            <span>
-              ºC
-            </span>
-          </div>
-        </div>
-        <div class="itemCard">
-          <div class="itemTitle">
-            <i class="uil uil-temperature-half"></i>
-            <p>Sensação Térmica</p>
-          </div>
-          <div class="itemResult">
-            <p id="ThermalSensation">
-              00
-            </p>
-            <span>
-              ºC
-            </span>
-          </div>
-        </div>
-      </div>
+    <div id="Loading">
+      <div class="loader"></div>
     </div>
 
-    <div id="searchModal" class="searchModal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <p id="CloseModalButton">&times;</p>
-          <h2>Procure uma Cidade pelo Nome</h2>
-        </div>
-        <div class="modal-body">
-          <input id="SearchModalInput" type="text" placeholder="Insira no Nome da Cidade">
-          <button id="SearchModalButton">
+    <main id="MainContent">
+      <section class="selectHeader">
+        <h1>Selecione a cidade:</h1>
+        <div class="selectContainer">
+          <i class="uil uil-location-point"></i>
+          <select id="selectCity">
+            <option value="6321162">Belo Horizonte</option>
+            <option value="524894">Moscou</option>
+            <option value="2735943">Porto</option>
+            <option value="5368361">Los Angeles</option>
+            <option value="2643743">Londres</option>
+          </select>
+
+          <button id="OpenModalButton">
             <i class="uil uil-search"></i>
           </button>
         </div>
+      </section>
+
+      <section class="wheatherInfo">
+        <div class="tempInfo">
+          <i id="WeatherMainIcon" class="uil uil-cloud-sun"></i>
+          <p id="WeatherMain">Nublado</p>
+          <div class="tempResult">
+            <h2 id="CityTemp">
+              00
+            </h2>
+            <span>ºC</span>
+          </div>
+        </div>
+        <div class="othersInfo">
+          <div class="itemCard">
+            <div class="itemTitle">
+              <i class="uil uil-wind"></i>
+              <p>Velocidade Do Vento</p>
+            </div>
+            <div class="itemResult">
+              <p id="WindSpeed">
+                0
+              </p>
+              <span>
+                m/s
+              </span>
+            </div>
+          </div>
+          <div class="itemCard">
+            <div class="itemTitle">
+              <i class="uil uil-raindrops-alt"></i>
+              <p>Humidade</p>
+            </div>
+            <div class="itemResult">
+              <p id="Humidity">
+                00
+              </p>
+              <span>
+                %
+              </span>
+            </div>
+          </div>
+          <div class="itemCard">
+            <div class="itemTitle">
+              <i class="uil uil-windsock"></i>
+              <p>Pressão</p>
+            </div>
+            <div class="itemResult">
+              <p id="Pressure">
+                0000
+              </p>
+              <span>
+                hPa
+              </span>
+            </div>
+          </div>
+          <div class="itemCard">
+            <div class="itemTitle">
+              <i class="uil uil-temperature-plus"></i>
+              <p>Temperatura Máxima</p>
+            </div>
+            <div class="itemResult">
+              <p id="MaximumTemperature">
+                00
+              </p>
+              <span>
+                ºC
+              </span>
+            </div>
+          </div>
+          <div class="itemCard">
+            <div class="itemTitle">
+              <i class="uil uil-temperature-minus"></i>
+              <p>Temperatura Mínima</p>
+            </div>
+            <div class="itemResult">
+              <p id="MinimumTemperature">
+                00
+              </p>
+              <span>
+                ºC
+              </span>
+            </div>
+          </div>
+          <div class="itemCard">
+            <div class="itemTitle">
+              <i class="uil uil-temperature-half"></i>
+              <p>Sensação Térmica</p>
+            </div>
+            <div class="itemResult">
+              <p id="ThermalSensation">
+                00
+              </p>
+              <span>
+                ºC
+              </span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div id="searchModal" class="searchModal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <p id="CloseModalButton">&times;</p>
+            <h2>Procure uma Cidade pelo Nome</h2>
+          </div>
+          <div class="modal-body">
+            <input id="SearchModalInput" type="text" placeholder="Insira no Nome da Cidade">
+            <button id="SearchModalButton">
+              <i class="uil uil-search"></i>
+            </button>
+          </div>
+        </div>
       </div>
-    </div>    
+    </main>
 
     <script src="./renderer.js"></script>
   </body>
