--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link href="./styles.css" rel="stylesheet">
-    <title>Wheather App</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div id="Loading">
